# sleuth-applications

./: .coveragerc  .env  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  nasdaq_screener.csv  pyproject.toml
.github/workflows/: CI.yml  build.yml  main.yml  release.yml  tests.yml
api/: get_ticker.py  hello_world.py  oauth.py
applications_container/: __init__.py  _rename.py  applications_container.py
reference/: api.yaml
template_container/: __init__.py  _rename.py  template_container.py
tests/: comments.txt  test_applications_container.py  test_comments.py  test_jwt.json  test_template_container.py
